tests/ui/errors/snapshots/parse_go_style_goroutine_block.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn test() {
 3 │   go {
   ·   ─┬
   ·    ╰── invalid syntax
 4 │     let x = 1
   ╰────
  help: Use `task { ... }` or `task my_function()` to spawn a concurrent task · code: [parse.syntax_error]
